# sddec25-01

./: .conclaude.yaml  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COMPREHENSIVE_VISUAL_FIX_REPORT.md  MODERNIZATION_SUMMARY.md  PROMPT.md  README.md  VISUAL_BUG_FIX_SUMMARY.md  demo.py  flake.nix  isusdd.cls  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  main.toc  mcp.nix  og.md  references.bib  shell.nix  test.aux
.claude/: settings.json
.claude/agents/: tester.md
.github/: SMB_DEPLOYMENT.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish-docs.yml  release.yml
apps/demo_tiny_effvit/: pyproject.toml
apps/demo_tiny_effvit/demo_tiny_effvit/: main.py
apps/nsa/: modal_train.py  pyproject.toml  run.sh  train.py  train_na.py
apps/precompute/: pyproject.toml
apps/precompute/precompute/: main.py
apps/precompute_inf/: pyproject.toml
apps/precompute_inf/precompute_inf/: main.py
apps/train_tiny_effvit/: main.py  pyproject.toml
apps/train_tiny_effvit_inf/: pyproject.toml
demo/: README.md  demo.py  demo_shallownet.py  requirements.txt
dsa/: demo.py  lightning_indexer.py  model.py  model_architecture_dsa  pyproject.toml  sparse_attention.py  test.py  train.py
nsa/: demo.py  pyproject.toml  test.py  train.py
nsa/nsa/: model.py
openspec/: project.md
poster/: README.md  poster-config.tex  poster.tex
poster/sections/: acknowledgments.tex  architecture.tex  conclusion.tex  introduction.tex  methodology.tex  results.tex  title.tex
sections/: 01-introduction.tex  02-requirements.tex  03-project-plan.tex  04-design.tex  05-testing.tex  06-implementation.tex  07-conclusion.tex  abstract.tex
spectr/: project.md
src/: precompute.py  train.py
training/: README.md  precompute.py  test.py  train_efficientvit.ipynb  train_efficientvit.py  train_efficientvit_local.py  train_efficientvit_tiny_local.py  train_ellipse.py  train_ellipse_local.py
training/models/: __init__.py  efficientvit.py
www/: index.html
www/css/: site.css
www/documents/: DesignDocSemester1.md  Report1Semester1.md  Report1Semester2.md  Report2Semester2.md  Report3Semester1.md  Report3Semester2.md  Report4Semester1.md  Report4Semester2.md  Report5Semester1.md  Report5Semester2.md  Report6Semester1.md  Report6Semester2.md  Report7Semester1.md  Report8Semester1.md
(+23 files in other folders)
