[project]
name = "demo-tiny-effvit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiny_effvit",
    "mediapipe>=0.10.0; python_version < '3.13'",
    "opencv-python>=4.5.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.scripts]
demo-tiny-effvit = "demo_tiny_effvit.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo_tiny_effvit"]

[tool.uv]
dev-dependencies = []
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
tiny_effvit = { workspace = true }
torch = { index = "pytorch-cu124" }
