[project]
name = "precompute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hf_dataset",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[project.scripts]
precompute = "precompute.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["precompute"]

[tool.uv.sources]
hf_dataset = { workspace = true }
